--- a/index.html
+++ b/index.html
@@ -16,8 +16,19 @@
   <h1> A Swanson of Ice and Fire </h1>
 </div>
 
- <div className="portrait"></div> <img src="https://news.illinois.edu/blog/files/6367/204736/39722.jpg" height=300 width=500  style="border: black 2px solid" ><div className="portrait"></div>
+ <div style='text-align: center;'> <img src="https://news.illinois.edu/blog/files/6367/204736/39722.jpg" height=300 width=500  style="border: black 2px solid" ></div>
+
+<div class="quotebox"> 
+  <div class="quote">
+  <p id=jsonData></p>
+  </div>
   
+    <a href> Unleash the Swanson </a>
   
+</div>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
+
+    <script src="js/index.js"></script>
+
 </body>
 </html>
